# homelab

./: .gitignore  CLAUDE.md  README.md  gym-run  install.sh  pyproject.toml
cards/: acl_readonly.yaml
cards/cross/: scenario_secret_lockdown.yaml
cards/permissions-acl/: _topic.md  cmd_acl_default_dir.yaml  cmd_acl_fix_mask.yaml  cmd_acl_group_rwx.yaml  cmd_acl_readonly.yaml  cmd_acl_revoke.yaml  recall_acl_mask.yaml  recall_acl_purpose.yaml  recall_default_acl.yaml  recall_getfacl_output.yaml  recall_remove_acl.yaml
cards/text-grep/: _topic.md  cmd_case_insensitive.yaml  cmd_context_lines.yaml  cmd_count_matching_files.yaml  cmd_invert_filter.yaml  cmd_recursive_search.yaml  recall_count_vs_list.yaml  recall_extended_regex.yaml  recall_fixed_string.yaml  recall_invert_match.yaml  recall_recursive.yaml
gym/: app.py  cards.py  cli.py  params.py  scenarios.py  srs.py
