[project]
name = "linux-practice-gym"
version = "0.1.0"
description = "Daily spaced-repetition gym for the 80/20 Linux skills a DevOps engineer must own."
requires-python = ">=3.11"
dependencies = [
    "fsrs>=4.0.0",
    "textual>=0.60.0",
    "PyYAML>=6.0",
]

[project.scripts]
gym = "gym.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gym"]
